--- a/non-pages/css/style.less
+++ b/non-pages/css/style.less
@@ -74,7 +74,12 @@ h1{                 /*no bottom margin on h1's since they's only used for page t
     .cent;
 }
 
-//h1, h2, h3,h4,h5,h6,
+
+header {    /*IMPORTANT = makes galleria hide behind the menu dropdowns*/
+    z-index: 2;
+}
+
+//h1, h2, h3,h4,h5,h6
 ul, ol {
     margin: 0;
 }
